--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('novo_orcamento') }}">Gerar Orçamento</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('lista_de_compras') }}">Lista de Compras</a>
+                    </li>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('logout') }}">
