criando atalho de lista de compras no index

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
 
     <footer class="text-center text-muted py-4 mt-auto">
         <div class="container">
-            <p>&copy; 2024-2025 - Sistema de Controle para Confeitando com Artes por Edneuza Pereira</p>
+            <p>&copy; 2024-2025 - Sistema de Controle para Confeitando com Artes feito por Sabrina Caldas </p>
         </div>
     </footer>
     
